--- a/index.html
+++ b/index.html
@@ -227,13 +227,14 @@
                           <a class="table__show-rows">Show 25</a>
                           <a class="table__show-rows">Show 50</a>
                           <a class="table__show-rows">Show 100</a>
-                        </div></div>
+                        </div>
+                    </div>
                 </td>
                 </tr>
                 </tfoot>
                 <tbody>
                 <tr>
-                    <td>Infobip USA</td><td>Customer </td><td>2020</td><td>123qwe456</td><td>Invoice</td><td>approved</td><td>Raiffeisen</td><td>1.1.2020 - 1.1.2021</td><td>1.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Infobip USA</td><td>Customer </td><td>2020</td><td>123qwe456</td><td>Invoice</td><td>approved</td><td>Raiffeisen</td><td>1.1.2020 - 1.1.2021</td><td>1.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
                 <td>Infobip HR</td><td>Customer 1</td><td>2020</td><td>4256gtz78</td><td>Invoice</td><td>approved</td><td>Hypo</td><td>1.1.2020 - 1.1.2021</td><td>2.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
