--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div id="modal">
             <div class="modal__button-bar">
-                <button class="modal__btn modal__save-btn" onclick="hideModal()">Save</button>
-                <button class="modal__btn modal__cancel-btn" onclick="hideModal()">Cancel</button>
+                <button class="modal__btn modal__save-btn" onclick="hideModal()"><i class="fa fa-floppy-o fa-lg modal__btn-icon" aria-hidden="true"></i>Save</button>
+                <button class="modal__btn modal__cancel-btn" onclick="hideModal()"><i class="fa fa-times fa-lg modal__btn-icon modal__btn-icon-cancel" aria-hidden="true"></i>Cancel</button>
             </div>
         </div>
         <main>
@@ -74,29 +74,29 @@
                 </tfoot>
                 <tbody>
                 <tr>
-                    <td>Infobip USA</td><td>Customer </td><td>cell3_1</td><td>cell4_1</td><td>cell5_1</td><td>cell6_1</td><td>cell7_1</td><td>cell8_1</td><td>cell9_1</td><td>cell10_1</td><td>cell11_1</td><td>cell12_1</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                    <td>Infobip USA</td><td>Customer </td><td>2020</td><td>123qwe456</td><td>Invoice</td><td>-</td><td>Raiffeisen</td><td>1.1.2020 - 1.1.2021</td><td>1.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Infobip HR</td><td>cell2_2</td><td>cell3_2</td><td>cell4_2</td><td>cell5_2</td><td>cell6_2</td><td>cell7_2</td><td>cell8_2</td><td>cell9_2</td><td>cell10_2</td><td>cell11_2</td><td>cell12_2</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Infobip HR</td><td>Customer 1</td><td>2020</td><td>4256gtz78</td><td>Invoice</td><td>-</td><td>Hypo</td><td>1.1.2020 - 1.1.2021</td><td>2.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Infobip China</td><td>cell2_3</td><td>cell3_3</td><td>cell4_3</td><td>cell5_3</td><td>cell6_3</td><td>cell7_3</td><td>cell8_3</td><td>cell9_3</td><td>cell10_3</td><td>cell11_3</td><td>cell12_3</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Infobip China</td><td>Customer 2</td><td>2020</td><td>758fgh235</td><td>Invoice</td><td>-</td><td>Barclays</td><td>1.1.2020 - 1.1.2021</td><td>3.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 1</td><td>cell2_4</td><td>cell3_4</td><td>cell4_4</td><td>cell5_4</td><td>cell6_4</td><td>cell7_4</td><td>cell8_4</td><td>cell9_4</td><td>cell10_4</td><td>cell11_4</td><td>cell12_4</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 1</td><td>Customer 3</td><td>2020</td><td>987hfg364</td><td>Invoice</td><td>-</td><td>Bank 1</td><td>1.1.2020 - 1.1.2021</td><td>3.500</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 2</td><td>cell2_5</td><td>cell3_5</td><td>cell4_5</td><td>cell5_5</td><td>cell6_5</td><td>cell7_5</td><td>cell8_5</td><td>cell9_5</td><td>cell10_5</td><td>cell11_5</td><td>cell12_5</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 2</td><td>Customer 4</td><td>2020</td><td>3284jho495</td><td>Invoice</td><td>-</td><td>Bank 2</td><td>1.1.2020 - 1.1.2021</td><td>2.500</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 3</td><td>cell2_6</td><td>cell3_6</td><td>cell4_6</td><td>cell5_6</td><td>cell6_6</td><td>cell7_6</td><td>cell8_6</td><td>cell9_6</td><td>cell10_6</td><td>cell11_6</td><td>cell12_6</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 3</td><td>Customer 5</td><td>2020</td><td>890oiu765</td><td>Invoice</td><td>-</td><td>Bank 3</td><td>1.1.2020 - 1.1.2021</td><td>1.000</td><td>EUR</td><td>today</td><td>SMS</td><td>yes</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 4</td><td>cell2_7</td><td>cell3_7</td><td>cell4_7</td><td>cell5_7</td><td>cell6_7</td><td>cell7_7</td><td>cell8_7</td><td>cell9_7</td><td>cell10_7</td><td>cell11_7</td><td>cell12_7</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 4</td><td>Customer 6</td><td>2019</td><td>548lkj234</td><td>Invoice</td><td>-</td><td>Bank 4</td><td>1.1.2020 - 1.1.2021</td><td>1.200</td><td>EUR</td><td>today</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 5</td><td>cell2_8</td><td>cell3_8</td><td>cell4_8</td><td>cell5_8</td><td>cell6_8</td><td>cell7_8</td><td>cell8_8</td><td>cell9_8</td><td>cell10_8</td><td>cell11_8</td><td>cell12_8</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 5</td><td>Customer 7</td><td>2019</td><td>789hjk567</td><td>Invoice</td><td>-</td><td>Bank 5</td><td>1.1.2020 - 1.1.2021</td><td>3.300</td><td>EUR</td><td>15 – 30</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 6</td><td>cell2_9</td><td>cell3_9</td><td>cell4_9</td><td>cell5_9</td><td>cell6_9</td><td>cell7_9</td><td>cell8_9</td><td>cell9_9</td><td>cell10_9</td><td>cell11_9</td><td>cell12_9</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 6</td><td>Customer 8</td><td>2019</td><td>kll444gnf</td><td>Invoice</td><td>-</td><td>Bank 6</td><td>1.1.2020 - 1.1.2021</td><td>4.500</td><td>EUR</td><td>15 – 30</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 7</td><td>cell2_10</td><td>cell3_10</td><td>cell4_10</td><td>cell5_10</td><td>cell6_10</td><td>cell7_10</td><td>cell8_10</td><td>cell9_10</td><td>cell10_10</td><td>cell11_10</td><td>cell12_10</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 7</td><td>Customer 9</td><td>2019</td><td>ghj456jhg</td><td>Invoice</td><td>-</td><td>Bank 7</td><td>1.1.2020 - 1.1.2021</td><td>2.000</td><td>EUR</td><td>15 – 30</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 8</td><td>cell2_11</td><td>cell3_11</td><td>cell4_11</td><td>cell5_11</td><td>cell6_11</td><td>cell7_11</td><td>cell8_11</td><td>cell9_11</td><td>cell10_11</td><td>cell11_11</td><td>cell12_11</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 8</td><td>Customer 10</td><td>2019</td><td>123asd890</td><td>Invoice</td><td>-</td><td>Bank 8</td><td>1.1.2020 - 1.1.2021</td><td>1.000</td><td>EUR</td><td>15 – 30</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 <tr>
-                <td>Company 9</td><td>cell2_12</td><td>cell3_12</td><td>cell4_12</td><td>cell5_12</td><td>cell6_12</td><td>cell7_12</td><td>cell8_12</td><td>cell9_12</td><td>cell10_12</td><td>cell11_12</td><td>cell12_12</td><td>cell13_1</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
+                <td>Company 9</td><td>Customer 11</td><td>2018</td><td>765jhn444</td><td>Invoice</td><td>-</td><td>Bank 9</td><td>1.1.2020 - 1.1.2021</td><td>500</td><td>EUR</td><td>15 – 30</td><td>WhatsApp</td><td>no</td><td class="table__edit-cell"><button class="table__edit-button" onclick="showModal()"><i class="fa fa-edit table__edit-icon"></i>Edit</button></td></tr>
                 </tbody>
                 </tr>
                 </table>
