--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
             <table class="table--blue">
                 <thead>
                 <tr>
-                <th>C. Name<br><input type="text" class="table__filter-input"></th>
-                <th>Customer<input type="text" class="table__filter-input"></th>
-                <th>Fiscal Year<input type="text" class="table__filter-input"></th>
-                <th>Doc. Number<input type="text" class="table__filter-input"></th>
-                <th>Doc. Type<br>
+                <th><span class="table__filter-input-text">C. Name</span><br><input type="text" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Customer</span><input type="text" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Fiscal Year</span><input type="text" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Doc. Number</span><input type="text" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Doc. Type</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>Invoice</option>
                         <option>Proforma Invoice</option>
                     </select>
                 </th>
-                <th>Doc. Status<input type="text" class="table__filter-input"></th>
-                <th>Bank Name<br>
+                <th><span class="table__filter-input-text">Doc. Status</span><input type="text" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Bank Name</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>Barclays</option>
@@ -159,9 +159,9 @@
                         <option>Santander</option>
                     </select>
                 </th>
-                <th>Doc. period<input type="date" class="table__filter-input"></th>
-                <th>Amount<input type="number" class="table__filter-input"></th>
-                <th>Currency<br>
+                <th><span class="table__filter-input-text">Doc. period</span><input type="date" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Amount</span><input type="number" class="table__filter-input"></th>
+                <th><span class="table__filter-input-text">Currency</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>HRK</option>
@@ -176,7 +176,7 @@
                         <option>CNH</option>
                     </select>
                 </th>
-                <th>Due in<br>
+                <th><span class="table__filter-input-text">Due in</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>today</option>
@@ -187,7 +187,7 @@
                         <option>over 120</option>
                     </select>
                 </th>
-                <th>Service<br>
+                <th><span class="table__filter-input-text">Service</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>SMS</option>
@@ -197,7 +197,7 @@
                         <option>Other</option>
                     </select>
                 </th>
-                <th>paid<br>
+                <th><span class="table__filter-input-text">paid</span><br>
                     <select class="table__select">
                         <option>all</option>
                         <option>Yes</option>
